{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 125,
  "lineage": "44f4514a-348c-57e5-6479-8bc17bb85ae0",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group/sg-0f9ae2545db4e90cb",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f9ae2545db4e90cb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07043cef3cc4aaa20"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bonz-dev-cluster-20260118164756558900000004",
            "name_prefix": "bonz-dev-cluster-",
            "owner_id": "967985385347",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ClusterName": "bonz-dev",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-cluster",
              "Project": "bonz-dev"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-cluster",
              "Project": "bonz-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group/sg-07043cef3cc4aaa20",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07043cef3cc4aaa20",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 10251/tcp webhook",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9ae2545db4e90cb"
                ],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9ae2545db4e90cb"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9ae2545db4e90cb"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9ae2545db4e90cb"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9ae2545db4e90cb"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9ae2545db4e90cb"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9ae2545db4e90cb"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "bonz-dev-node-20260118164756551400000001",
            "name_prefix": "bonz-dev-node-",
            "owner_id": "967985385347",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ClusterName": "bonz-dev",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-node",
              "Project": "bonz-dev",
              "kubernetes.io/cluster/bonz-dev": "owned"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-node",
              "Project": "bonz-dev",
              "kubernetes.io/cluster/bonz-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-107494653",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0f9ae2545db4e90cb",
            "security_group_rule_id": "sgr-0525ba1d32119ffb4",
            "self": false,
            "source_security_group_id": "sg-07043cef3cc4aaa20",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1067344498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-0ba707669b41b5861",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-1013105548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-0f9cfd912b827b91b",
            "self": false,
            "source_security_group_id": "sg-0f9ae2545db4e90cb",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3867848956",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-0b9a4c7f2974bf715",
            "self": false,
            "source_security_group_id": "sg-0f9ae2545db4e90cb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-591210186",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-061f2136042396222",
            "self": false,
            "source_security_group_id": "sg-0f9ae2545db4e90cb",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3934208348",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-093ce01a4cd5578f5",
            "self": false,
            "source_security_group_id": "sg-0f9ae2545db4e90cb",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4179852669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-0752411ddafe1c2ce",
            "self": false,
            "source_security_group_id": "sg-0f9ae2545db4e90cb",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2642562742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-07b97c3891d85c68d",
            "self": false,
            "source_security_group_id": "sg-0f9ae2545db4e90cb",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-137073655",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-04bf5c8db886b6c00",
            "self": false,
            "source_security_group_id": "sg-0f9ae2545db4e90cb",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3506960711",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-081afa8a04a2d6623",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3358217680",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-0362b53a02e18d5e4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1819670079",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "us-east-1",
            "security_group_id": "sg-07043cef3cc4aaa20",
            "security_group_rule_id": "sgr-09ce7129fc1e23c38",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.self_managed_node_group[\"voip-rtp\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:subnet/subnet-0739da08bd41f1623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 1018,
            "cidr_block": "172.31.4.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0739da08bd41f1623",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967985385347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.self_managed_node_group[\"voip-rtp\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group/sg-0550a673bec62e1c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0550a673bec62e1c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RTP media streams",
                "from_port": 10000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 60000
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "rtpengine NG control (internal)",
                "from_port": 22222,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22222
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "rtpengine sidecar DTMF (internal)",
                "from_port": 22223,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 22223
              }
            ],
            "name": "bonz-dev-voip-rtp-2026011816575401610000000f",
            "name_prefix": "bonz-dev-voip-rtp-",
            "owner_id": "967985385347",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-rtp",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-rtp",
              "NodeGroup": "voip-rtp",
              "Project": "bonz-dev",
              "Purpose": "rtp-media"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-rtp",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-rtp",
              "NodeGroup": "voip-rtp",
              "Project": "bonz-dev",
              "Purpose": "rtp-media"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.self_managed_node_group[\"voip-rtp\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_outbound",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0723921ee106ab343",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0723921ee106ab343",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0550a673bec62e1c2",
            "security_group_rule_id": "sgr-0723921ee106ab343",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-rtp",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-rtp-all_outbound",
              "NodeGroup": "voip-rtp",
              "Project": "bonz-dev",
              "Purpose": "rtp-media"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-rtp",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-rtp-all_outbound",
              "NodeGroup": "voip-rtp",
              "Project": "bonz-dev",
              "Purpose": "rtp-media"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.self_managed_node_group[\"voip-rtp\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtp_media",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0b5dd676349e20ac6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "RTP media streams",
            "from_port": 10000,
            "id": "sgr-0b5dd676349e20ac6",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0550a673bec62e1c2",
            "security_group_rule_id": "sgr-0b5dd676349e20ac6",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-rtp",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-rtp-rtp_media",
              "NodeGroup": "voip-rtp",
              "Project": "bonz-dev",
              "Purpose": "rtp-media"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-rtp",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-rtp-rtp_media",
              "NodeGroup": "voip-rtp",
              "Project": "bonz-dev",
              "Purpose": "rtp-media"
            },
            "to_port": 60000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "rtpengine_ng",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-031e64f0daf9ddd57",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": "rtpengine NG control (internal)",
            "from_port": 22222,
            "id": "sgr-031e64f0daf9ddd57",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0550a673bec62e1c2",
            "security_group_rule_id": "sgr-031e64f0daf9ddd57",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-rtp",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-rtp-rtpengine_ng",
              "NodeGroup": "voip-rtp",
              "Project": "bonz-dev",
              "Purpose": "rtp-media"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-rtp",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-rtp-rtpengine_ng",
              "NodeGroup": "voip-rtp",
              "Project": "bonz-dev",
              "Purpose": "rtp-media"
            },
            "to_port": 22222
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "rtpengine_sidecar",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0315af7541a5261fc",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": "rtpengine sidecar DTMF (internal)",
            "from_port": 22223,
            "id": "sgr-0315af7541a5261fc",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0550a673bec62e1c2",
            "security_group_rule_id": "sgr-0315af7541a5261fc",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-rtp",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-rtp-rtpengine_sidecar",
              "NodeGroup": "voip-rtp",
              "Project": "bonz-dev",
              "Purpose": "rtp-media"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-rtp",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-rtp-rtpengine_sidecar",
              "NodeGroup": "voip-rtp",
              "Project": "bonz-dev",
              "Purpose": "rtp-media"
            },
            "to_port": 22223
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.self_managed_node_group[\"voip-sip\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:subnet/subnet-0739da08bd41f1623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 1018,
            "cidr_block": "172.31.4.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0739da08bd41f1623",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967985385347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02cd6ac6167097a01"
          }
        }
      ]
    },
    {
      "module": "module.eks.module.self_managed_node_group[\"voip-sip\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group/sg-0777b8a0e7f416c17",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0777b8a0e7f416c17",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.109.103.64/28",
                  "185.45.152.0/24",
                  "185.45.155.0/24",
                  "15.235.128.64/28",
                  "185.45.154.0/24",
                  "31.31.222.192/27",
                  "195.122.19.0/27"
                ],
                "description": "SIP UDP - Zadarma",
                "from_port": 5060,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 5060
              },
              {
                "cidr_blocks": [
                  "15.235.128.64/28",
                  "185.45.154.0/24",
                  "31.31.222.192/27",
                  "195.122.19.0/27",
                  "185.45.152.0/24",
                  "185.45.155.0/24",
                  "103.109.103.64/28"
                ],
                "description": "SIP TLS - Zadarma",
                "from_port": 5061,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5061
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "drachtio admin port (internal)",
                "from_port": 9022,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9022
              },
              {
                "cidr_blocks": [
                  "195.122.19.0/27",
                  "31.31.222.192/27",
                  "185.45.154.0/24",
                  "15.235.128.64/28",
                  "103.109.103.64/28",
                  "185.45.152.0/24",
                  "185.45.155.0/24"
                ],
                "description": "SIP TCP - Zadarma",
                "from_port": 5060,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5060
              }
            ],
            "name": "bonz-dev-voip-sip-20260118165754033800000010",
            "name_prefix": "bonz-dev-voip-sip-",
            "owner_id": "967985385347",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cd6ac6167097a01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.self_managed_node_group[\"voip-sip\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_outbound",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0cd7f73e17b41f930",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0cd7f73e17b41f930",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-0cd7f73e17b41f930",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-all_outbound",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-all_outbound",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.self_managed_node_group[\"voip-sip\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "drachtio_admin",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-07c83c49df81f8b14",
            "cidr_ipv4": "172.31.0.0/16",
            "cidr_ipv6": null,
            "description": "drachtio admin port (internal)",
            "from_port": 9022,
            "id": "sgr-07c83c49df81f8b14",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-07c83c49df81f8b14",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-drachtio_admin",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-drachtio_admin",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 9022
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tcp_zadarma_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-04b16ba3e23e45483",
            "cidr_ipv4": "185.45.152.0/24",
            "cidr_ipv6": null,
            "description": "SIP TCP - Zadarma",
            "from_port": 5060,
            "id": "sgr-04b16ba3e23e45483",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-04b16ba3e23e45483",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_1",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_1",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tcp_zadarma_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0b7eecf39315cfc52",
            "cidr_ipv4": "185.45.154.0/24",
            "cidr_ipv6": null,
            "description": "SIP TCP - Zadarma",
            "from_port": 5060,
            "id": "sgr-0b7eecf39315cfc52",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-0b7eecf39315cfc52",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_2",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_2",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tcp_zadarma_3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0586c1d2f7b14d138",
            "cidr_ipv4": "185.45.155.0/24",
            "cidr_ipv6": null,
            "description": "SIP TCP - Zadarma",
            "from_port": 5060,
            "id": "sgr-0586c1d2f7b14d138",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-0586c1d2f7b14d138",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_3",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_3",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tcp_zadarma_4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-03d91e0edcba24b4e",
            "cidr_ipv4": "195.122.19.0/27",
            "cidr_ipv6": null,
            "description": "SIP TCP - Zadarma",
            "from_port": 5060,
            "id": "sgr-03d91e0edcba24b4e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-03d91e0edcba24b4e",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_4",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_4",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tcp_zadarma_5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-02342e1060ed75358",
            "cidr_ipv4": "103.109.103.64/28",
            "cidr_ipv6": null,
            "description": "SIP TCP - Zadarma",
            "from_port": 5060,
            "id": "sgr-02342e1060ed75358",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-02342e1060ed75358",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_5",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_5",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tcp_zadarma_6",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-02878f076107dac61",
            "cidr_ipv4": "31.31.222.192/27",
            "cidr_ipv6": null,
            "description": "SIP TCP - Zadarma",
            "from_port": 5060,
            "id": "sgr-02878f076107dac61",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-02878f076107dac61",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_6",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_6",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tcp_zadarma_7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-017da9074b26537e7",
            "cidr_ipv4": "15.235.128.64/28",
            "cidr_ipv6": null,
            "description": "SIP TCP - Zadarma",
            "from_port": 5060,
            "id": "sgr-017da9074b26537e7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-017da9074b26537e7",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_7",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tcp_zadarma_7",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tls_zadarma_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-07331316a246183cc",
            "cidr_ipv4": "185.45.152.0/24",
            "cidr_ipv6": null,
            "description": "SIP TLS - Zadarma",
            "from_port": 5061,
            "id": "sgr-07331316a246183cc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-07331316a246183cc",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_1",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_1",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5061
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tls_zadarma_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-073f1fb4e74ed415c",
            "cidr_ipv4": "185.45.154.0/24",
            "cidr_ipv6": null,
            "description": "SIP TLS - Zadarma",
            "from_port": 5061,
            "id": "sgr-073f1fb4e74ed415c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-073f1fb4e74ed415c",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_2",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_2",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5061
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tls_zadarma_3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-06b66e3ea62fa39b1",
            "cidr_ipv4": "185.45.155.0/24",
            "cidr_ipv6": null,
            "description": "SIP TLS - Zadarma",
            "from_port": 5061,
            "id": "sgr-06b66e3ea62fa39b1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-06b66e3ea62fa39b1",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_3",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_3",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5061
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tls_zadarma_4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-07d200ce4592b7e0f",
            "cidr_ipv4": "195.122.19.0/27",
            "cidr_ipv6": null,
            "description": "SIP TLS - Zadarma",
            "from_port": 5061,
            "id": "sgr-07d200ce4592b7e0f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-07d200ce4592b7e0f",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_4",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_4",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5061
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tls_zadarma_5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-03aa619b321f544f2",
            "cidr_ipv4": "103.109.103.64/28",
            "cidr_ipv6": null,
            "description": "SIP TLS - Zadarma",
            "from_port": 5061,
            "id": "sgr-03aa619b321f544f2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-03aa619b321f544f2",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_5",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_5",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5061
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tls_zadarma_6",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-073194d2cde443738",
            "cidr_ipv4": "31.31.222.192/27",
            "cidr_ipv6": null,
            "description": "SIP TLS - Zadarma",
            "from_port": 5061,
            "id": "sgr-073194d2cde443738",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-073194d2cde443738",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_6",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_6",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5061
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_tls_zadarma_7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-003bceede9aac7b5f",
            "cidr_ipv4": "15.235.128.64/28",
            "cidr_ipv6": null,
            "description": "SIP TLS - Zadarma",
            "from_port": 5061,
            "id": "sgr-003bceede9aac7b5f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-003bceede9aac7b5f",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_7",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_tls_zadarma_7",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5061
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_udp_zadarma_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-07f0877c7f6da04c9",
            "cidr_ipv4": "185.45.152.0/24",
            "cidr_ipv6": null,
            "description": "SIP UDP - Zadarma",
            "from_port": 5060,
            "id": "sgr-07f0877c7f6da04c9",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-07f0877c7f6da04c9",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_1",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_1",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_udp_zadarma_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-05fcf429ff8b68d03",
            "cidr_ipv4": "185.45.154.0/24",
            "cidr_ipv6": null,
            "description": "SIP UDP - Zadarma",
            "from_port": 5060,
            "id": "sgr-05fcf429ff8b68d03",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-05fcf429ff8b68d03",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_2",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_2",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_udp_zadarma_3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0230d6d984a85effd",
            "cidr_ipv4": "185.45.155.0/24",
            "cidr_ipv6": null,
            "description": "SIP UDP - Zadarma",
            "from_port": 5060,
            "id": "sgr-0230d6d984a85effd",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-0230d6d984a85effd",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_3",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_3",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_udp_zadarma_4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0b12e694deea0623d",
            "cidr_ipv4": "195.122.19.0/27",
            "cidr_ipv6": null,
            "description": "SIP UDP - Zadarma",
            "from_port": 5060,
            "id": "sgr-0b12e694deea0623d",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-0b12e694deea0623d",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_4",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_4",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_udp_zadarma_5",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0d2b6ce1ea0e3a5d0",
            "cidr_ipv4": "103.109.103.64/28",
            "cidr_ipv6": null,
            "description": "SIP UDP - Zadarma",
            "from_port": 5060,
            "id": "sgr-0d2b6ce1ea0e3a5d0",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-0d2b6ce1ea0e3a5d0",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_5",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_5",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_udp_zadarma_6",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0a3fb2d84798e4697",
            "cidr_ipv4": "31.31.222.192/27",
            "cidr_ipv6": null,
            "description": "SIP UDP - Zadarma",
            "from_port": 5060,
            "id": "sgr-0a3fb2d84798e4697",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-0a3fb2d84798e4697",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_6",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_6",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        },
        {
          "index_key": "sip_udp_zadarma_7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967985385347:security-group-rule/sgr-0082d83dd95073f22",
            "cidr_ipv4": "15.235.128.64/28",
            "cidr_ipv6": null,
            "description": "SIP UDP - Zadarma",
            "from_port": 5060,
            "id": "sgr-0082d83dd95073f22",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0777b8a0e7f416c17",
            "security_group_rule_id": "sgr-0082d83dd95073f22",
            "tags": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_7",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "tags_all": {
              "ClusterName": "bonz-dev",
              "Component": "jambonz-sbc-sip",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bonz-dev-voip-sip-sip_udp_zadarma_7",
              "NodeGroup": "voip-sip",
              "Project": "bonz-dev",
              "Purpose": "sip-signaling"
            },
            "to_port": 5060
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.eks_auto",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks.module.self_managed_node_group.data.aws_subnet.this",
            "module.eks.time_sleep.this"
          ]
        }
      ]
    }
  ]
}